@@ -25,6 +25,7 @@ import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
 import io.crate.exceptions.UnhandledServerException;
 import io.crate.metadata.FunctionInfo;
+import io.crate.planner.projection.Projection;
 import io.crate.planner.symbol.*;
 
 import java.util.*;
@@ -104,7 +105,7 @@ public class PlannerContextBuilder {
                             "Unexpected result column symbol: " + symbol);
                 }
 
-                context.resolvedSymbols.put(symbol, resolvedSymbol);
+                context.addResolvedSymbol(symbol, resolvedSymbol);
                 context.outputs.add(resolvedSymbol);
             }
         }
@@ -177,6 +178,70 @@ public class PlannerContextBuilder {
     }
 
     /**
+     * add a projection to the context builder for later use when creating a
+     * plan node for example.
+     *
+     * Will track the input columns to use when referencing a collected symbol.
+     *
+     * @see #getAndClearProjections()
+     * @param projection the projection to add
+     */
+    public void addProjection(Projection projection) {
+        if (context.projectionBuilder == null) {
+            context.projectionBuilder = ImmutableList.builder();
+        }
+        context.projectionBuilder.add(projection);
+
+        /*
+         * track current position of resolved input columns
+         *
+         * if the currently resolved symbols are:
+         *
+         *  Reference: x -> InputColumn(0)
+         *  Aggregation Avg(y) -> InputColumn(1)
+         *
+         * and the projection to add has the following outputs:
+         *
+         *  [ InputColumn(1), InputColumn(0)]
+         *
+         * that means, is actually swapping the outputs, then this loop will change the
+         * currently resolved symbols to:
+         *
+         * Reference: x -> InputColumn(1)
+         * Aggregation Avg(y) -> InputColumn(0)
+         *
+         * The currentResolvedSymbols can then be used to reference the symbols
+         * after the currently added Projection.
+         *
+         */
+        for (Map.Entry<Symbol,Symbol> entry : context.currentResolvedSymbols.entrySet()) {
+            List<? extends Symbol> outputs = projection.outputs();
+            for (int i = 0; i < outputs.size(); i++) {
+                Symbol projectionOutput = outputs.get(i);
+                if (entry.getValue().equals(projectionOutput)) {
+                    context.currentResolvedSymbols.put(entry.getKey(), new InputColumn(i, entry.getValue().valueType()));
+                    break;
+                }
+            }
+        }
+    }
+
+    /**
+     * get a list of projection that were formerly fed to this context builder
+     * using {@linkplain #addProjection(io.crate.planner.projection.Projection)}.
+     * @return a possible empty list of projections
+     */
+    public ImmutableList<Projection> getAndClearProjections() {
+        if (context.projectionBuilder == null) {
+            return ImmutableList.of();
+        } else {
+            ImmutableList<Projection> projections = context.projectionBuilder.build();
+            context.projectionBuilder = ImmutableList.builder();
+            return projections;
+        }
+    }
+
+    /**
      * returns the symbols to be used in the first topN projection
      * <p/>
      * if their is a second topN projection the {@link #passThroughOutputs()} method should be
@@ -232,7 +297,7 @@ public class PlannerContextBuilder {
         @Override
         public Symbol visitFunction(Function symbol, PlannerContext context) {
             if (symbol.info().type().equals(FunctionInfo.Type.AGGREGATE)) {
-                Symbol resolvedSymbol = context.resolvedSymbols.get(symbol);
+                Symbol resolvedSymbol = context.currentResolvedSymbols.get(symbol);
 
                 if (resolvedSymbol == null) {
                     // resolve symbol
@@ -251,7 +316,7 @@ public class PlannerContextBuilder {
 
         @Override
         public Symbol visitReference(Reference symbol, PlannerContext context) {
-            Symbol resolvedSymbol = context.resolvedSymbols.get(symbol);
+            Symbol resolvedSymbol = context.currentResolvedSymbols.get(symbol);
             if (resolvedSymbol == null) {
                 throw new UnhandledServerException(
                         "Cannot resolve symbol: " + symbol);
